RESOLVED FIXED241060
REGRESSION(251082@main): Broke WPE/GTK builds
https://bugs.webkit.org/show_bug.cgi?id=241060
Summary REGRESSION(251082@main): Broke WPE/GTK builds
Philippe Normand
Reported 2022-05-28 03:39:16 PDT
Fixing...
Attachments
Philippe Normand
Comment 1 2022-05-28 03:41:16 PDT
EWS
Comment 2 2022-05-28 03:44:40 PDT
Committed r294993 (251093@main): <https://commits.webkit.org/251093@main> Reviewed commits have been landed. Closing PR #1138 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.