REGRESSION(251082@main): Broke WPE/GTK builds https://bugs.webkit.org/show_bug.cgi?id=241060

Patch by Philippe Normand <philn@igalia.com> on 2022-05-28
Unreviewed, fix WPE/GTK builds by including new WebCoreOpaqueRoot header in custom JS bindings.

* Source/WebCore/bindings/js/JSDOMQuadCustom.cpp:
* Source/WebCore/bindings/js/JSNavigatorCustom.cpp:
* Source/WebCore/bindings/js/JSServiceWorkerGlobalScopeCustom.cpp:
* Source/WebCore/bindings/js/JSWorkerGlobalScopeCustom.cpp:
* Source/WebCore/bindings/js/JSWorkerNavigatorCustom.cpp:

Canonical link: https://commits.webkit.org/251093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294993 268f45cc-cd09-0410-ab3c-d52691b4dbfc