Source/WebCore/bindings/js/JSServiceWorkerGlobalScopeCustom.cpp
@@ -30,6 +30,7 @@
 
 #include "ServiceWorkerClients.h"
 #include "ServiceWorkerGlobalScope.h"
+#include "WebCoreOpaqueRoot.h"
 
 namespace WebCore {
 
